Fix alignment of HomeValuesCard

--- a/src/containers/Home/HomeValues/HomeValuesCard/HomeValuesCard.scss
+++ b/src/containers/Home/HomeValues/HomeValuesCard/HomeValuesCard.scss
@@ -42,6 +42,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    text-align: center;
     width: 300px;
 
     &:not(:last-child) {
@@ -55,6 +56,7 @@
     @media (max-width: 768px) {
       flex-direction: row;
       justify-content: center;
+      text-align: start;
       width: 100%;
 
       &:not(:last-child) {
